--- a/Fruitabout.html
+++ b/Fruitabout.html
@@ -22,7 +22,7 @@
    </label>
    <!-- <label <a href="#" class="logo">Fruit<span>Juice</span> </a></label>  -->
       
-           <div class="logo">Fruit<span>juice</span><img src="../Images/heart-fruit1.png"></div>
+           <div class="logo">Fruit<span>juice</span><img src="./Images/heart-fruit1.png"></div>
            <ul>
             <li><a class="active" href="./Fruitjuice.html">Home</a></li>
             <li><a href="./fruitabout.html">About</a></li>
@@ -43,7 +43,7 @@
             <!---about----->
             <div class="about" id="about">
                    <div class="menu">
-                     <img src="../Images/fruit-healthy-food1.png">
+                     <img src="./Images/fruit-healthy-food1.png">
                    </div>
 
                      <div class="tag" data-aos="flip-right">
