--- a/Fruitblog.html
+++ b/Fruitblog.html
@@ -20,7 +20,7 @@
          <i class="fas fa-bars"></i>
        </label>
        <!-- <label <a href="#" class="logo">Fruit<span>Juice</span> </a></label>  -->
-       <div class="logo" >Fruit<span>Juice</span><img src="../Images/heart-fruit1.png"></div>
+       <div class="logo" >Fruit<span>Juice</span><img src="./Images/heart-fruit1.png"></div>
        <ul>
          <li><a class="active" href="./Fruitjuice.html">Home</a></li>
          <li><a href="./Fruitabout.html">About</a></li>
@@ -37,7 +37,7 @@
                         
                     <div class="blog_card">
                         <div class="blog_img" data-aos="fade-left">
-                             <img src="../Images/blog_1.png">
+                             <img src="./Images/blog_1.png">
                         </div>
                           <div class="blog_tag">
 
@@ -67,7 +67,7 @@
                             </div>
 
                             <div class="blog_img">
-                              <img src="../Images/blog_2.png">
+                              <img src="./Images/blog_2.png">
                          </div>
                   </div>
                   <hr>
@@ -75,7 +75,7 @@
 
                   <div class="blog_card">
                     <div class="blog_img" data-aos="fade-right">
-                         <img src="../Images/blog_3.png">
+                         <img src="./Images/blog_3.png">
                     </div>
                       <div class="blog_tag" data-aos="fade-left">
 
