--- a/Fruitcontact.html
+++ b/Fruitcontact.html
@@ -22,7 +22,7 @@
          <i class="fas fa-bars"></i>
        </label>
        <!-- <label <a href="#" class="logo">Fruit<span>Juice</span> </a></label>  -->
-    <div class="logo" >Fruit<span>Juice</span><img src="../Images/heart-fruit1.png"></div>
+    <div class="logo" >Fruit<span>Juice</span><img src="./Images/heart-fruit1.png"></div>
        <ul>
          <li><a class="active" href="./Fruitjuice.html">Home</a></li>
          <li><a href="./Fruitabout.html">About</a></li>
@@ -39,7 +39,7 @@
               <section>
                            
                   <div class="imgBx">
-                    <img src="../Images/mixed-fruits.jpg">
+                    <img src="./Images/mixed-fruits.jpg">
                   </div>
                   <div class="contentBx">
                         <div class="formBx">
