--- a/Fruitservices.html
+++ b/Fruitservices.html
@@ -20,7 +20,7 @@
           <i class="fas fa-bars"></i>
         </label>
         <!-- <label <a href="#" class="logo">Fruit<span>Juice</span> </a></label>  -->
-        <div class="logo" >Fruit<span>Juice</span><img src="../Images/heart-fruit1.png"></div>
+        <div class="logo" >Fruit<span>Juice</span><img src="./Images/heart-fruit1.png"></div>
         <ul>
           <li><a class="active" href="./Fruitjuice.html">Home</a></li>
           <li><a href="./Fruitabout.html">About</a></li>
@@ -44,7 +44,7 @@
                                  
                   <div class="products_card">
                         <div class="products_img">
-                          <img src="../Images/Pomegranate_fruit.jpg">
+                          <img src="./Images/Pomegranate_fruit.jpg">
                         </div>
                           <div class="products_tag">
                             <h2>Pomegranate</h2>
@@ -61,7 +61,7 @@
                           
                   <div class="products_card">
                     <div class="products_img">
-                      <img src="../Images/sugarcane.png">
+                      <img src="./Images/sugarcane.png">
                     </div>
                       <div class="products_tag">
                         <h2>Sugarcane</h2>
@@ -79,7 +79,7 @@
  
                   <div class="products_card">
                     <div class="products_img">
-                      <img src="../Images/jujube.jpg">
+                      <img src="./Images/jujube.jpg">
                     </div>
                       <div class="products_tag">
                         <h2>Jujube</h2>
@@ -96,7 +96,7 @@
 
                     <div class="products_card">
                     <div class="products_img">
-                      <img src="../Images/starfruit.jpg">
+                      <img src="./Images/starfruit.jpg">
                     </div>
                       <div class="products_tag">
                         <h2>Starfruit</h2>
@@ -125,7 +125,7 @@
             <div class="banner" data-aos="flip-up">
 
                  <div class="banner_one">
-                     <img src="../Images/all fruits.png">
+                     <img src="./Images/all fruits.png">
                       <div class="banner_tag">
                         <h3>Save UP to 50%</h3>
                         <a href="#" class="banner_btn">Shop Now</a>
@@ -133,7 +133,7 @@
                  </div>
 
                  <div class="banner_two">
-                  <img src="../Images/all fruits2.png">
+                  <img src="./Images/all fruits2.png">
                    <div class="banner_tag">
                      <h3>Free Shipping</h3>
                      <p>ON ORDER UP TO $100</p>
