--- a/Fruitabout.html
+++ b/Fruitabout.html
@@ -24,11 +24,11 @@
       
            <div class="logo">Fruit<span>juice</span><img src="./Images/heart-fruit1.png"></div>
            <ul>
-            <li><a class="active" href="./Fruitjuice.html">Home</a></li>
+            <li><a class="active" href="./index.html">Home</a></li>
             <li><a href="./fruitabout.html">About</a></li>
             <li><a href="./Fruitservices.html">Services</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./Fruitblog.html">Blog</a></li>
+            <li><a href="./Fruitcontact.html">Contact</a></li>
            </ul>
       </nav>
 
