--- a/Fruitservices.html
+++ b/Fruitservices.html
@@ -22,7 +22,7 @@
         <!-- <label <a href="#" class="logo">Fruit<span>Juice</span> </a></label>  -->
         <div class="logo" >Fruit<span>Juice</span><img src="./Images/heart-fruit1.png"></div>
         <ul>
-          <li><a class="active" href="./Fruitjuice.html">Home</a></li>
+          <li><a class="active" href="./index.html">Home</a></li>
           <li><a href="./Fruitabout.html">About</a></li>
           <li><a href="./Fruitservices.html">Services</a></li>
           <li><a href="./Fruitblog.html">Blog</a></li>
